--- a/core/templates/crear_venta.html
+++ b/core/templates/crear_venta.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Registrar Venta{% endblock %}
+{% block title %}{% endblock %}
 {% block content %}
 
 <div class="contenedor">
