--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -67,10 +67,11 @@
   </nav>
 
   <!-- Contenido dinámico -->
-  <div class="container mt-4">
-    {% block content %}
-    {% endblock %}
-  </div>
+<div class="container-fluid px-3 py-3">
+  {% block content %}
+  {% endblock %}
+</div>
+
 
   <!-- Script de cambio de tema -->
   <script>
