--- a/core/templates/crear_venta.html
+++ b/core/templates/crear_venta.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}{% endblock %}
+{% block title %}Crear Venta{% endblock %}
 {% block content %}
 
 <div class="contenedor">
@@ -26,6 +26,7 @@
   <div class="d-grid gap-2">
     <div class="btn btn-outline-success quick-product" data-codigo="343434">Aceite Hidráulico</div>
     <div class="btn btn-outline-success quick-product" data-codigo="353535">Llanta 16</div>
+    <div class="btn btn-outline-success quick-product" data-codigo="363636">Llanta 45</div>
     <div class="btn btn-outline-success quick-product" data-codigo="363636">Llanta 45</div>
     <div class="btn btn-outline-success quick-product" data-codigo="363636">Llanta 45</div>
     <div class="btn btn-outline-success quick-product" data-codigo="363636">Llanta 45</div>
