--- a/core/templates/login.html
+++ b/core/templates/login.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="login-container">
-        <h2>🔐 Iniciar Sesión</h2>
+        <h2>🔐 Iniciar Sesión en Demo</h2>
 
         {% if messages %}
             <ul class="messages">
