--- a/core/templates/cotizaciones/lista_cotizaciones.html
+++ b/core/templates/cotizaciones/lista_cotizaciones.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 {% block title %}Lista de Cotizaciones{% endblock %}
 {% block content %}
-<div class="d-flex justify-content-between align-items-center mb-3">
+<div class="contenedor">
+  <div class="d-flex justify-content-between align-items-center mb-3">  
   <h2>📑 Cotizaciones</h2>
   <a href="{% url 'crear_cotizacion' %}" class="btn btn-primary">➕ Nueva Cotización</a>
 </div>
