--- a/core/templates/cotizaciones/editar_cotizacion.html
+++ b/core/templates/cotizaciones/editar_cotizacion.html
@@ -81,12 +81,12 @@
       <div class="columna-derecha">
         <h6>⚡ Accesos rápidos</h6>
      <div class="d-grid gap-2">
-          <button type="button" class="btn btn-outline-primary quick-product" data-codigo="343434">Aceite Hidráulico</button>
-          <button type="button" class="btn btn-outline-primary quick-product" data-codigo="353535">Llanta 16</button>
-          <button type="button" class="btn btn-outline-primary quick-product" data-codigo="363636">Llanta 45</button>
-          <button type="button" class="btn btn-outline-primary quick-product" data-codigo="6767789">Llanta Tractor 76</button>
-          <button type="button" class="btn btn-outline-primary quick-product" data-codigo="205/55/16">Llanta Turismos</button>
-          <button type="button" class="btn btn-outline-primary quick-product" data-codigo="0">Parcho 18</button>
+              <div class="btn btn-outline-success quick-product" data-codigo="ACEITE10W30">Aceite Castrol 10W30</div>
+    <div class="btn btn-outline-success quick-product" data-codigo="BAT12V">BATERIA12V'BAT12V</div>
+    <div class="btn btn-outline-success quick-product" data-codigo="FILTROACEITE">Filtro de Aceite Toyota</div>
+    <div class="btn btn-outline-success quick-product" data-codigo="FILTROAIRE">Filtro de Aire Hyundai</div>
+    <div class="btn btn-outline-success quick-product" data-codigo="195R15">Llanta Firestone</div>
+    <div class="btn btn-outline-success quick-product" data-codigo="205R16">Llanta Goodyear 205/70 R16</div>
         </div>
       </div>
 
